src/main/java/org/dase/parser/parser_simple/SimpleParser_v2.java
/* SimpleParser_v2.java */
/* Generated By:JavaCC: Do not edit this line. SimpleParser_v2.java */
/* This file is part of the OWL API.
 * The contents of this file are subject to the LGPL License, Version 3.0.
 * Copyright 2014, The University of Manchester
 * 
 * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License along with this program.  If not, see http://www.gnu.org/licenses/.
 *
 * Alternatively, the contents of this file may be used under the terms of the Apache License, Version 2.0 in which case, the provisions of the Apache License Version 2.0 are applicable instead of those above.
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. */

package org.dase.parser.parser_simple;

import java.util.Set;
import java.util.HashSet;
import java.util.*;

import org.dase.core.SharedDataHolder;
import org.dase.datastructure.CandidateClass;
import org.dase.datastructure.CandidateSolution;
import org.dase.datastructure.ConjunctiveHornClause;
import org.semanticweb.owlapi.vocab.OWLRDFVocabulary;
import org.semanticweb.owlapi.util.*;

import org.semanticweb.owlapi.model.*;

@SuppressWarnings("all")
public class SimpleParser_v2 implements SimpleParser_v2Constants {
    private String defaultNamespace = IRI.create("http://www.semanticweb.org/ontologies/Ontology").toString();
    private Map<String, String> namespaceMap = new HashMap<String, String>();
    private OWLDataFactory factory;
    private Map<String, IRI> iriMap = new HashMap<String, IRI>();
    private Map<String, IRI> qnameIRIMap = new HashMap<String, IRI>();
    private Set<OWLAxiom> axioms = new LinkedHashSet<OWLAxiom>();
    private int a;
    private static boolean negationHappened = false;

    public void setOWLDataFactory(OWLDataFactory factory) {
        this.factory = factory;
    }

    public void setPrefixMapping(String prefix, String namespace) {
        namespaceMap.put(prefix, namespace);
    }

    public void setDefaultNamespace(String ns) {
        defaultNamespace = ns;
    }

    public IRI getIRI(String val) {
        IRI iri = iriMap.get(val);
        if(iri == null) {
            iri = IRI.create(val);
            iriMap.put(val, iri);
        }
        return iri;
    }

    public IRI getIRIFromId(String qname) {
        if(qname.equals("top") || qname.equals("\u22a4")) {
            return OWLRDFVocabulary.OWL_THING.getIRI();
        }
        if(qname.equals("bottom") || qname.equals("\u22a5")) {
            return OWLRDFVocabulary.OWL_NOTHING.getIRI();
        }
        IRI iri = qnameIRIMap.get(qname);
        if(iri == null) {
            iri = getIRI(defaultNamespace + "#" + qname);
            qnameIRIMap.put(qname, iri);
        }
        return iri;
    }
    private void addAxiom(OWLAxiom ax) {
        if (ax == null) {
          return;
        }
        axioms.add(ax);
    }

/*
 * <pre>
 *   Candidate solution is of the form:
 *
 *   l
 * A ⊓ 􏰃∃Ri.Ci,
 *   i=1
 *    which can  also be written as:
 *   k3       k2
 * A ⊓ 􏰃∃Ri. 􏰀(⊔(Bji ⊓¬(D1 ⊔...⊔Dji)))
 *   i=1    j=1
 *
 *   here,
 *   k3 = limit of object properties considered. = ConfigParams.objPropsCombinationLimit
 *   k2 = limit of horn clauses. = ConfigParams.hornClauseLimit.
 *
 *   As the solution follows this grammer, it has severe limitation:
 *   1. No. of Bare Class (like A) can be at-most 1. We are not allowing A ⊓ B, where both A and B are bare types. If we omit this, we will have to verify the grouping of the solution again.
 *   2. For single object property, we can have multiple horn clause which will be used as OR,
 *              for example: ∃objProp1.((posClass1) ⊔ (posClass2))
 *   3. For multilpe object property, each property will be used as AND,
 *              for example: ∃objProp2.(posClass2) ⊓ ∃objProp1.(posClass1)
 * </pre>

        Grammer:
        CandidateSolution = (CandidateClass) ( AND CandidateClass)*
        ------------
        CandidateClass = PosClass |
                         NOT NegClass |
                         SOME objProp DOT PosClass |
                         SOME objProp DOT NOT NegClass |
                         (ConjunctiveHornClause) ( OR ConjunctiveHornClause)* | // without object properties and without bracket
                         "(" (ConjunctiveHornClause) ( OR ConjunctiveHornClause)* ")" | // without object properties and with bracket
                         SOME objProp DOT "(" (ConjunctiveHornClause) ( OR ConjunctiveHornClause)* ")" | // with object properties and with bracket
                         SOME objProp DOT NOT "(" (ConjunctiveHornClause) ( OR ConjunctiveHornClause)* ")" | // with object properties and with bracket
        --------------
        ConjunctiveHornClause = Class |  // may be positive or negative!!!!!!!!!!
                              = PosClass AND NegClasses |
                              = "(" PosClass AND NegClasses ")" |
                              = NegClasses
        --------------
        NegClasses = NOT NegClass |
                   = NOT "(" NegClass ( OR NegClass )* ")"
 */
  final public 
CandidateSolution parseCandidateSolution() throws ParseException {CandidateSolution candidateSolution = new CandidateSolution();
    CandidateClass candidateClass = null;
    candidateClass = parseCandidateClass();
candidateSolution.addCandidateClass(candidateClass);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(AND);
      candidateClass = parseCandidateClass();
candidateSolution.addCandidateClass(candidateClass);
    }
    jj_consume_token(0);
{if ("" != null) return candidateSolution;}
    throw new Error("Missing return statement in function");
  }

  final public CandidateClass parseCandidateClass() throws ParseException {CandidateClass candidateClass = null;
    ConjunctiveHornClause conjunctiveHornClause = null;
    OWLClassExpression owlClassExpression;
    OWLObjectProperty owlObjectProperty = null;
    if (jj_2_2(6)) {
      jj_consume_token(NOT);
      owlClassExpression = parseClassId();
conjunctiveHornClause = new ConjunctiveHornClause(SharedDataHolder.noneOWLObjProp);
        conjunctiveHornClause.addNegObjectType(owlClassExpression);
        candidateClass = new CandidateClass(SharedDataHolder.noneOWLObjProp);
        candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
    } else if (jj_2_3(6)) {
      jj_consume_token(SOME);
      owlObjectProperty = parseObjectPropertyId();
      jj_consume_token(DOT);
      owlClassExpression = parseClassId();
conjunctiveHornClause = new ConjunctiveHornClause(owlObjectProperty);
    conjunctiveHornClause.setPosObjectType(owlClassExpression);
    candidateClass = new CandidateClass(owlObjectProperty);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
    } else if (jj_2_4(6)) {
      jj_consume_token(SOME);
      owlObjectProperty = parseObjectPropertyId();
      jj_consume_token(DOT);
      jj_consume_token(NOT);
      owlClassExpression = parseClassId();
conjunctiveHornClause = new ConjunctiveHornClause(owlObjectProperty);
    conjunctiveHornClause.addNegObjectType(owlClassExpression);
    candidateClass = new CandidateClass(owlObjectProperty);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
    } else if (jj_2_5(6)) {
      conjunctiveHornClause = parseConjunctiveHornClause(SharedDataHolder.noneOWLObjProp,false);
candidateClass = new CandidateClass(SharedDataHolder.noneOWLObjProp);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OR:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        jj_consume_token(OR);
        conjunctiveHornClause = parseConjunctiveHornClause(SharedDataHolder.noneOWLObjProp,false);
//    candidateClass = new CandidateClass(SharedDataHolder.noneOWLObjProp);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
      }
    } else if (jj_2_6(6)) {
      jj_consume_token(OPENPAR);
      conjunctiveHornClause = parseConjunctiveHornClause(SharedDataHolder.noneOWLObjProp,false);
candidateClass = new CandidateClass(SharedDataHolder.noneOWLObjProp);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OR:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        jj_consume_token(OR);
        conjunctiveHornClause = parseConjunctiveHornClause(SharedDataHolder.noneOWLObjProp,false);
//    candidateClass = new CandidateClass(SharedDataHolder.noneOWLObjProp);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
      }
      jj_consume_token(CLOSEPAR);
    } else if (jj_2_7(6)) {
      jj_consume_token(SOME);
      owlObjectProperty = parseObjectPropertyId();
      jj_consume_token(DOT);
      jj_consume_token(OPENPAR);
      conjunctiveHornClause = parseConjunctiveHornClause(owlObjectProperty,false);
candidateClass = new CandidateClass(owlObjectProperty);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
      label_4:
      while (true) {
        if (jj_2_1(6)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(OR);
        conjunctiveHornClause = parseConjunctiveHornClause(owlObjectProperty,false);
//    candidateClass = new CandidateClass(owlObjectProperty);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
      }
      jj_consume_token(CLOSEPAR);

    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOME:{
        jj_consume_token(SOME);
        owlObjectProperty = parseObjectPropertyId();
        jj_consume_token(DOT);
        jj_consume_token(NOT);
        jj_consume_token(OPENPAR);
        conjunctiveHornClause = parseConjunctiveHornClause(owlObjectProperty,true);
//    candidateClass = new CandidateClass(owlObjectProperty);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case OR:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_5;
          }
          jj_consume_token(OR);
          conjunctiveHornClause = parseConjunctiveHornClause(owlObjectProperty,true);
//    candidateClass = new CandidateClass(owlObjectProperty);
    candidateClass.addConjunctiveHornClauses(conjunctiveHornClause);
        }
        jj_consume_token(CLOSEPAR);

        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return candidateClass;}
    throw new Error("Missing return statement in function");
  }

  final public ConjunctiveHornClause parseConjunctiveHornClause(OWLObjectProperty owlObjectProperty,boolean isNegative) throws ParseException {ConjunctiveHornClause conjunctiveHornClause = new ConjunctiveHornClause(owlObjectProperty);
    ArrayList<OWLClassExpression> negTypes = new ArrayList<OWLClassExpression>();
    OWLClassExpression owlClassExpression;
    if (jj_2_8(6)) {
      owlClassExpression = parseClassId();
if(isNegative) { conjunctiveHornClause.addNegObjectType(owlClassExpression);} else{ conjunctiveHornClause.setPosObjectType(owlClassExpression);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        owlClassExpression = parseClassId();
conjunctiveHornClause.setPosObjectType(owlClassExpression);
        jj_consume_token(AND);
        parseNegClasses();
for(OWLClassExpression negType: negTypes) { conjunctiveHornClause.addNegObjectType(negType); }
        break;
        }
      case OPENPAR:{
        jj_consume_token(OPENPAR);
        owlClassExpression = parseClassId();
conjunctiveHornClause.setPosObjectType(owlClassExpression);
        jj_consume_token(AND);
        negTypes = parseNegClasses();
for(OWLClassExpression negType: negTypes){ conjunctiveHornClause.addNegObjectType(negType); }
        jj_consume_token(CLOSEPAR);
        break;
        }
      case NOT:{
        negTypes = parseNegClasses();
for(OWLClassExpression negType: negTypes){ conjunctiveHornClause.addNegObjectType(negType); }
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return conjunctiveHornClause;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<OWLClassExpression> parseNegClasses() throws ParseException {ArrayList<OWLClassExpression> negTypes = new ArrayList<OWLClassExpression>();
    OWLClassExpression owlClassExpression;
    if (jj_2_9(6)) {
      jj_consume_token(NOT);
      owlClassExpression = parseClassId();
negTypes.add(owlClassExpression);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NOT:{
        jj_consume_token(NOT);
        jj_consume_token(OPENPAR);
        owlClassExpression = parseClassId();
negTypes.add(owlClassExpression);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case OR:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_6;
          }
          jj_consume_token(OR);
          owlClassExpression = parseClassId();
negTypes.add(owlClassExpression);
        }
        jj_consume_token(CLOSEPAR);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return negTypes;}
    throw new Error("Missing return statement in function");
  }

  final public OWLObjectProperty parseObjectPropertyId() throws ParseException {IRI iri;
    boolean inverse = false;
    iri = parseId();
{if ("" != null) return factory.getOWLObjectProperty(iri);}
    throw new Error("Missing return statement in function");
  }

  final public OWLClass parseClassId() throws ParseException {IRI iri;
    iri = parseId();
{if ("" != null) return factory.getOWLClass(iri);}
    throw new Error("Missing return statement in function");
  }

  final public IRI parseId() throws ParseException {Token t;
    t = jj_consume_token(ID);
{if ("" != null) return getIRIFromId(t.image);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }
